--- a/package.json
+++ b/package.json
@@ -1,24 +1,34 @@
 {
-  "name": "goit-node-js",
+  "name": "nodejs-hw-02",
   "version": "1.0.0",
-  "description": "goit-node-js",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "generate": "node src/scripts/generateContacts.js",
-    "add-one": "node src/scripts/addOneContact.js",
-    "get-all": "node src/scripts/getAllContacts",
-    "count": "node src/scripts/countContacts.js",
-    "remove-last": "node src/scripts/removeLastContact.js",
-    "remove-all": "node src/scripts/removeAllContacts.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/New4MAT/nodejs-hw-02.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/New4MAT/nodejs-hw-02/issues"
+  },
+  "homepage": "https://github.com/New4MAT/nodejs-hw-02#readme",
+  "description": "",
   "devDependencies": {
-    "@eslint/js": "^9.2.0",
-    "@faker-js/faker": "^9.8.0",
-    "eslint": "^9.2.0",
-    "globals": "^15.1.0"
+    "eslint": "^9.30.1",
+    "nodemon": "^3.1.10"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.1.0",
+    "express": "^5.1.0",
+    "mongoose": "^8.16.2",
+    "pino": "^9.7.0",
+    "pino-http": "^10.5.0"
   }
 }
