HW 5 with contacts API

--- a/package.json
+++ b/package.json
@@ -2,35 +2,26 @@
   "name": "nodejs-hw-02",
   "version": "1.0.0",
   "type": "module",
-  "main": "src/index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "node src/index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/New4MAT/nodejs-hw-02.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/New4MAT/nodejs-hw-02/issues"
-  },
-  "homepage": "https://github.com/New4MAT/nodejs-hw-02#readme",
-  "description": "",
-  "devDependencies": {
-    "eslint": "^9.30.1",
-    "nodemon": "^3.1.10"
-  },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.1.0",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.2",
     "pino": "^9.7.0",
     "pino-http": "^10.5.0"
+  },
+  "devDependencies": {
+    "eslint": "^9.30.1",
+    "nodemon": "^3.1.10"
   }
 }
