--- a/package.json
+++ b/package.json
@@ -3,25 +3,34 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "predev": "if not exist tmp mkdir tmp",
     "dev": "nodemon src/index.js",
+    "prestart": "if not exist tmp mkdir tmp",
     "start": "node src/index.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "express-validator": "^7.2.1",
+    "handlebars": "^4.7.8",
     "http-errors": "^2.0.0",
+    "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.1",
     "pino": "^9.7.0",
-    "pino-http": "^10.5.0"
+    "pino-pretty": "^13.1.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "^9.30.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "pino-http": "^10.5.0"
   }
 }
