--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle docs/openapi.yaml --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -24,9 +27,11 @@
     "nodemailer": "^6.10.1",
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@redocly/cli": "^2.1.0",
     "eslint": "^9.30.1",
     "nodemon": "^3.1.10",
     "pino-http": "^10.5.0"
